--- a/epcurate-curation.html
+++ b/epcurate-curation.html
@@ -296,7 +296,7 @@
 
 <div id="storyboard">
 <p class="auto-height"></p>
-<p>Episode storyboard (<em id="totalLeft">50</em> videos left)<span>Duration <em id="totalDuration">00:00:00</em></span></p>
+<p>Episode storyboard (<em id="storyboard-length">50</em> videos left)<span>Duration <em id="storyboard-duration">00:00:00</em></span></p>
 <div id="storyboard-wrap" class="storyboard-list">
 <p class="notice">+ Add videos here</p>
 <ul id="storyboard-list">
