--- a/channel-add.html
+++ b/channel-add.html
@@ -114,6 +114,7 @@ Add your 9x9.tv creations and activity to your facebook timeline
 <div id="content-main-wrap">
 <div class="constrain">
 <form name="settingForm" id="settingForm" method="get" action="">
+<input type="hidden" name="isPublic" id="isPublic" value="true" />
 <div class="fminput clearfix">
 <label for="name"><acronym title="Required field" class="mark-required">*</acronym>Title</label>
 <div class="fmfield">
