--- a/epcurate-publish.html
+++ b/epcurate-publish.html
@@ -1,6 +1,9 @@
 <!DOCTYPE html>
 <head>
 <meta charset="utf-8" />
+<meta http-equiv="cache-control" content="no-cache" />
+<meta http-equiv="pragma" content="no-cache" />
+<meta http-equiv="expires" content="0" />
 <link rel="stylesheet" href="stylesheets/style.css" />
 <link rel="stylesheet" href="stylesheets/lightbox.css" />
 <link rel="stylesheet" href="stylesheets/jquery.datepick.css" />
@@ -28,45 +31,20 @@
 <body>
 
 <!--============================== header start ==============================-->
-<div id="header" class="hide">
+<div id="header">
   <p id="logo"></p>
   <ul id="nav">
-    <li id="home"><span>Home</span></li>
-    <li id="guide"><span>Guide</span></li>
-    <li id="browse"> <span>Browse</span>
-      <ul id="browse-dropdown" class="dropdown">
-        <li>All</li>
-        <li>Animals & Pets</li>
-        <li>Art & Design</li>
-        <li>Autos & Vehicles</li>
-        <li>Cartoons & Animation</li>
-        <li>Comedy</li>
-        <li>Fashion, Food & Living</li>
-        <li>Gaming</li>
-        <li>How-To</li>
-        <li>Education & Lectures</li>
-        <li>Music</li>
-        <li>News</li>
-        <li>Nonprofits & Faith</li>
-        <li>People, Blogs & Shorts</li>
-        <li>Science</li>
-        <li>Sports & Health</li>
-        <li>Tech & Apps</li>
-        <li>TV & Film</li>
-      </ul>
-    </li>
-    <li id="search">
-      <p id="btn-search"></p>
-      <input type="text" class="textfield" value="Search" id="search-field">
-    </li>
+    <li id="home"><span><a href="/#!home">Home</a></span></li>
+    <li id="guide"><span><a href="/#!guide">Guide</a></span></li>
+    <li id="browse"><span><a href="/#!directory">Browse</a></span></li>
     <li id="profile">
       <p id="btn-profile"></p>
-      <p id="selected-profile">Snowball</p>
+      <p id="selected-profile">Guest</p>
       <ul id="profile-dropdown" class="dropdown">
-        <li>My page</li>
-        <li>Studio</li>
-        <li>Settings</li>
-        <li>Log out</li>
+        <li><a id="profile-mypage" href="/#!curator=profileUrl">My page</a></li>
+        <li><a href="./">Studio</a></li>
+        <li><a href="/#!settings">Settings</a></li>
+        <li><a id="profile-logout" href="/api/login">Log out</a></li>
       </ul>
     </li>
   </ul>
@@ -75,7 +53,7 @@
 
 <div id="epcurate-nav">
 <div class="epcurate-nav-wrap">
-<h3><a href="#" id="epcurate-nav-back" class="btn-back">Back<span class="tip"><img src="images/bg_tip_top.png" alt="" /><span class="tip-left"><span class="tip-right"><span class="tip-middle">Leave</span></span></span></span></a><a href="#">Episode Curation</a></h3>
+<h3><a href="#" id="epcurate-nav-back" class="btn-back">Back<span class="tip"><img src="images/bg_tip_top.png" alt="" /><span class="tip-left"><span class="tip-right"><span class="tip-middle">Leave</span></span></span></span></a><a href="javascript:void(0);">Episode Curation</a></h3>
 <ul>
 <li><a href="#" id="epcurate-nav-info">Information</a></li>
 <li><a href="#" id="epcurate-nav-curation">Curation</a></li>
@@ -143,42 +121,33 @@
 <!--============================== content-main start ========================-->
 
 <!--============================== footer start ==============================-->
-<p id="footer-control" class="hide"></p>
-
-<div id="footer" class="hide">
-	<ul id="footer-list">
-		<li>
-			<p class="select-txt">About Us</p>
-			<p class="select-btn"></p>
-			<ul class="select-list">
-				<li>About us</li>
-				<li>Help</li>
-				<li>Report</li>
-				<li>Terms & Policy</li>
-				<li>Contact us</li>
-				<li>Partners</li>
-				<li>Curators</li>
-				<li>Press</li>
-				<li>Curation Contest</li>
-			</ul>
-		</li>
-		<li>
-			<p class="select-txt">Language</p>
-			<p class="select-btn"></p>
-			<ul class="select-list">
-				<li>English</li>
-				<li>中文</li>
-			</ul>
-		</li>
-		<li>
-			<p class="select-txt">Region</p>
-			<p class="select-btn"></p>
-			<ul class="select-list">
-				<li>US</li>
-				<li>Taiwan</li>
-			</ul>
-		</li>
-	</ul>
+<p id="footer-control"></p>
+<div id="footer">
+  <ul id="footer-list">
+    <li>
+      <p class="select-txt">About Us</p>
+      <p class="select-btn"></p>
+      <ul class="select-list">
+        <li><a href="/#!about=about">About us</a></li>
+        <li><a href="/#!about=help">Help</a></li>
+        <li><a href="/#!about=report">Report</a></li>
+        <li><a href="/#!about=terms">Terms & Policy</a></li>
+        <li><a href="/#!about=contact">Contact us</a></li>
+        <li><a href="/#!about=partners">Partners</a></li>
+        <li><a href="/#!about=curators">Curators</a></li>
+        <li><a href="/#!about=press">Press</a></li>
+        <li><a href="/#!about=contest">Curation Contest</a></li>
+      </ul>
+    </li>
+    <li>
+      <p class="select-txt">Language</p>
+      <p class="select-btn"></p>
+      <ul class="select-list">
+        <li>English</li>
+        <li>中文</li>
+      </ul>
+    </li>
+  </ul>
 </div>
 <!--============================== footer close ==============================-->
 
