--- a/episode-list.html
+++ b/episode-list.html
@@ -83,6 +83,13 @@
 <script id="title-func-tmpl" type="text/x-jquery-tmpl">
 <h2><span id="channel-name">${name}</span> &gt; Episode list (<span id="episode-counter"></span>)</h2>
 <p class="curate btns"><span><a href="epcurate-info.html?cid=${id}" id="episode-curate">Curate a new episode</a></span></p>
+<div class="caption">
+<p class="episode">Episode</p>
+<div class="episode-info">
+<p class="time">Publish time</p>
+<p class="views">Views</p>
+</div>
+</div>
 </script>
 </div>
 <div id="content-main-wrap">
@@ -104,13 +111,6 @@
 <script id="episode-favorite-list-tmpl" type="text/x-jquery-tmpl">
 <div id="ep-list" class="favorite">
 <ul id="episode-list">
-<li class="title clearfix">
-<p class="episode">Episode</p>
-<div class="episode-info">
-<p class="time">Publish time</p>
-<p class="views">Views</p>
-</div>
-</li>
 <!-- template = #episode-favorite-list-tmpl-item -->
 </ul>
 </div>
@@ -186,13 +186,6 @@
 <script id="episode-list-tmpl" type="text/x-jquery-tmpl">
 <div id="ep-list">
 <ul id="episode-list">
-<li class="title clearfix">
-<p class="episode">Episode</p>
-<div class="episode-info">
-<p class="time">Publish time</p>
-<p class="views">Views</p>
-</div>
-</li>
 <!-- template = #episode-list-tmpl-item -->
 </ul>
 </div>
