--- a/epcurate-info.html
+++ b/epcurate-info.html
@@ -82,7 +82,7 @@
 
 <script id="epcurate-info-tmpl" type="text/x-jquery-tmpl">
 <div class="fminput clearfix">
-<label for="name"><acronym title="Required field" class="mark-required">*</acronym>Title</label>
+<label for="name"><acronym title="Required field" class="mark-required">*</acronym>Episode title</label>
 <div class="fmfield">
 <p class="text"><span><input type="text" name="name" id="name" maxlength="100" value="${name}" class="text" /></span></p>
 <p class="notice hide">This field is required.</p>
