--- a/index.html
+++ b/index.html
@@ -114,7 +114,7 @@
 </div>
 
 <div class="func-wrap">
-<p class="time">Update: ${$item.timeConverter(updateDate)}</p>
+<p class="time">Update: ${formatTimestamp(updateDate)}</p>
 <div class="func-btns">
 {{if contentType == CMS_CONF.YOUR_FAVORITE}}
 <div class="btn-wrap disable">
